applied home page transition, fixed redundant css spacing

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -24,6 +24,3 @@ body {
   overflow-y: scroll;
 }
 
-.content-container {
-  margin-top: 150px;
-}
